--- a/ProjectInfoCovid19/app/src/main/AndroidManifest.xml
+++ b/ProjectInfoCovid19/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppTheme.NoAction"
         android:usesCleartextTraffic="true">
         <activity android:name=".activities.MainActivity">
             <intent-filter>
